--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,11 +4,17 @@
 @import "/node_modules/@angular/material/theming";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .title {
   font-size: xx-large;
   font-weight: lighter;
   margin-top: 3.5%!important;
   margin-bottom: 2.5%!important;
+}
+.mat-drawer-inner-container::-webkit-scrollbar {
+  display: none;
 }
